--- a/laktory/resources/quickstart-stacks/workflows/stack_pulumi.yaml
+++ b/laktory/resources/quickstart-stacks/workflows/stack_pulumi.yaml
@@ -27,8 +27,8 @@ resources:
   #   - pl-stocks-sql: Deployed as a Job with SQL transformations
   #   - pl-stocks-spark-dlt: Deployed as a Delta Live Tables with spark transformations
   pipelines:
-    pl-stocks-sql: ${include.resources/pl-stocks-sql.yaml}
-    pl-stocks-spark-dlt: ${include.resources/pl-stocks-spark-dlt.yaml}
+    pl-stocks-job: ${include.resources/pl-stocks-job.yaml}
+    pl-stocks-dlt: ${include.resources/pl-stocks-dlt.yaml}
 
 
 # Environment Specific Settings
