--- a/.gitignore
+++ b/.gitignore
@@ -36,11 +36,15 @@ coverage.xml
 htmlcov
 
 # Test data
+.terraform*
+Pulumi.yaml
+stack.tf.json
 tests/*terraform*
 tests/Pulumi.yaml
 tests/stack.tf.json
 tests/tmp*
 tests/.terraform/
+tmp-*
 
 # Test results
 junit
