--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,4 +18,9 @@
         }
     },
     "terminal.integrated.defaultProfile.osx": "dev",
+    "python.testing.pytestArgs": [
+        "tests"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true,
 }
