--- a/tests/data/pl-polars-local.yaml
+++ b/tests/data/pl-polars-local.yaml
@@ -26,12 +26,12 @@ nodes:
 
     - with_column:
         name: symbol
-        sql_expr: data.symbol
+        expr: data.symbol
 
     - with_column:
         name: close
         type: double
-        sql_expr: data.close
+        expr: data.close
 
     - func_name: laktory.smart_join
       func_kwargs:
