--- a/tests/data/pl-spark-dlt.yaml
+++ b/tests/data/pl-spark-dlt.yaml
@@ -31,14 +31,14 @@ nodes:
     - with_column:
         name: created_at
         type: timestamp
-        sql_expr: data.created_at
+        expr: data.created_at
     - with_column:
         name: symbol
-        sql_expr: data.symbol
+        expr: data.symbol
     - with_column:
         name: close
         type: double
-        sql_expr: data.close
+        expr: data.close
     - func_name: drop
       func_args:
       - data
