--- a/laktory/resources/quickstart-stacks/workflows/resources/pl-stocks-dlt.yaml
+++ b/laktory/resources/quickstart-stacks/workflows/resources/pl-stocks-dlt.yaml
@@ -41,7 +41,7 @@ nodes:
 - name: slv_stock_prices
   expectations:
   - name: positive_price
-    expression: open > 0
+    expr: open > 0
     action: FAIL
   source:
     node_name: brz_stock_prices
@@ -59,15 +59,15 @@ nodes:
     - with_columns:
       - name: created_at
         type: timestamp
-        sql_expr: data.created_at
+        expr: data.created_at
       - name: symbol
-        sql_expr: data.symbol
+        expr: data.symbol
       - name: open
         type: double
-        sql_expr: data.open
+        expr: data.open
       - name: close
         type: double
-        sql_expr: data.close
+        expr: data.close
     - func_name: drop_duplicates
       func_kwargs:
         subset: ["created_at", "symbol"]
