--- a/laktory/resources/quickstart-stacks/workflows/resources/notebooks.yaml
+++ b/laktory/resources/quickstart-stacks/workflows/resources/notebooks.yaml
@@ -1,9 +1,9 @@
 notebook-dlt-laktory-pl:
   source: ./notebooks/dlt/dlt_laktory_pl.py
-  dirpath: notebooks/dlt/
+  dirpath: dlt/
 notebook-job-laktory-pl:
   source: ./notebooks/jobs/job_laktory_pl.py
-  dirpath: notebooks/jobs/
+  dirpath: jobs/
 notebook-job-hello:
   source: ./notebooks/jobs/job_hello.py
-  dirpath: notebooks/jobs/
+  dirpath: jobs/
