--- a/laktory/resources/quickstart-stacks/workflows/resources/pl-stocks-dlt.yaml
+++ b/laktory/resources/quickstart-stacks/workflows/resources/pl-stocks-dlt.yaml
@@ -31,7 +31,7 @@ nodes:
 # Bronze Table
 - name: brz_stock_prices
   source:
-    path: dbfs:/Workspace/.laktory/data/stock_prices/
+    path: dbfs:/laktory/data/stock_prices/
     as_stream: true
     format: JSON
   sinks:
