--- a/laktory/resources/quickstart-stacks/workflows/resources/dbfsfiles.yaml
+++ b/laktory/resources/quickstart-stacks/workflows/resources/dbfsfiles.yaml
@@ -1,3 +1,3 @@
 dbfs-file-stock-prices:
-  path: /Workspace/.laktory/data/stock_prices/stock_prices.json
+  path: /laktory/data/stock_prices/stock_prices.json
   source: ./data/stock_prices.json
