--- a/laktory/resources/quickstart-stacks/workflows/resources/pl-stocks-dlt.yaml
+++ b/laktory/resources/quickstart-stacks/workflows/resources/pl-stocks-dlt.yaml
@@ -33,7 +33,7 @@ nodes:
   source:
     path: dbfs:/laktory/data/stock_prices/
     as_stream: true
-    format: JSON
+    format: JSONL
   sinks:
   - table_name: brz_stock_prices
 
