--- a/laktory/resources/quickstart-stacks/workflows/resources/pl-stocks-job.yaml
+++ b/laktory/resources/quickstart-stacks/workflows/resources/pl-stocks-job.yaml
@@ -27,7 +27,7 @@ nodes:
   source:
     path: dbfs:/laktory/data/stock_prices/
     as_stream: false
-    format: JSON
+    format: JSONL
   sinks:
   - table_name: brz_stock_prices_job
     mode: OVERWRITE
