--- a/.github/workflows/run_quickstart.yml
+++ b/.github/workflows/run_quickstart.yml
@@ -32,7 +32,7 @@ env:
 
 jobs:
   laktory-quickstart:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04  # ubuntu-latest does not seem to have terraform available anymore
     steps:
       - uses: actions/checkout@v4
 
