--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   tests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04  # ubuntu-latest does not seem to have terraform available anymore
     strategy:
       fail-fast: false
       matrix:
