--- a/laktory/resources/quickstart-stacks/local-pipeline/pipeline.yaml
+++ b/laktory/resources/quickstart-stacks/local-pipeline/pipeline.yaml
@@ -1,5 +1,5 @@
 name: pl-stock-prices
-dataframe_type: POLARS
+dataframe_backend: POLARS
 
 # --------------------------------------------------------------------------- #
 # Stock Prices                                                                #
