--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   tests:
-    runs-on: ubuntu-22.04  # ubuntu-latest does not seem to have terraform available anymore
+    runs-on: ubuntu-22.04  # ubuntu-latest does not seem to have Terraform available anymore
     strategy:
       fail-fast: false
       matrix:
@@ -20,6 +20,7 @@ jobs:
           - '3.10'
           - '3.11'
           - '3.12'
+          - '3.13'
     steps:
       - name: Check if run tests
         env:
