--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,10 +17,15 @@ jobs:
 
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: "3.12"
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          version: "0.5.14"
 
       - name: Build and publish laktory to pypi
-        run: make publish
+        run: make build publish
         env:
           FLIT_INDEX_URL: ${{ vars.FLIT_INDEX_URL }}
           FLIT_USERNAME: ${{ vars.FLIT_USERNAME }}
@@ -28,6 +33,7 @@ jobs:
           TWINE_REPOSITORY_URL: ${{ vars.TWINE_REPOSITORY_URL }}
           TWINE_USERNAME: ${{ vars.TWINE_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
+          UV_PUBLISH_TOKEN: ${{ secrets.UV_PUBLISH_TOKEN }}
 
   tag:
     permissions:
