--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,3 @@
-
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
@@ -100,6 +99,9 @@ include = ["laktory*"]
 
 [tool.hatch.version]
 path = "laktory/_version.py"
+
+[tool.uv.index]
+url="https://test.pypi.org/simple/"
 
 # CLI
 [project.scripts]
