--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,15 +52,15 @@ jobs:
       - name: Run tests
         if: ${{ env.run_tests == 'true' && success()}}
         run: make install-dev test
-#        env:
+        env:
 #          AWS_REGION: ${{ vars.AWS_REGION }}
-#          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 #          DATABRICKS_HOST: ${{ vars.DATABRICKS_HOST }}
 #          DATABRICKS_WAREHOUSE_ID: ${{ vars.DATABRICKS_WAREHOUSE_ID }}
 #          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
 #          LAKEHOUSE_SA_CONN_STR: ${{ secrets.LAKEHOUSE_SA_CONN_STR }}
-#          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
 #          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
 #          AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
 #          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
